feat: Add middleware and nextAuth

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 NEXTAUTH_SECRET=dRrJp9m5+T3hcJ71Grb5VoorYXY7a6tppsksjUjaVsg=
 NEXTAUTH_URL=http://localhost:3000
 
-NEXT_PUBLIC_BACKEND_URL=http://10.34.220.168:3001
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_URL=http://10.34.220.168:3030
